# servant-large-generics

./: CHANGELOG.md  cabal.project  servant-large-generics.cabal
src/Servant/Test/: .#API.hs  API.hs
src/Servant/Test/API/: Generic.hs  LargeGeneric.hs
src/Servant/Test/Server/: Generic.hs  LargeGeneric.hs
