cabal-version:      2.4
name:               servant-large-generics
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Andrey Prokopenko
maintainer:         persiantiger@yandex.ru

extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Servant.Test.API.Generic
    Servant.Test.API.LargeGeneric
    Servant.Test.Server.Generic
    Servant.Test.Server.LargeGeneric
  build-depends:
      base
    , servant
    , servant-server
    , large-records
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:        -Wall -O2 -Werror
